fix z-index in shop page

--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -1506,6 +1506,9 @@
       }
     }
   }
+  .z-0 {
+    z-index: 0;
+  }
   .z-1 {
     z-index: 1;
   }
